--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "license": "ISC",
   "description": "Note taking app and personal knowledge base",
   "devDependencies": {
+    "@skeletonlabs/skeleton": "^3.0.0-next.10",
+    "@skeletonlabs/skeleton-svelte": "^1.0.0-next.18",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@types/electron": "^1.6.12",
     "@types/node": "^22.10.5",
@@ -48,6 +50,7 @@
     "@editorjs/table": "^2.4.3",
     "@tailwindcss/vite": "^4.0.3",
     "editorjs-drag-drop": "^1.1.16",
+    "lucide-svelte": "^0.475.0",
     "tailwindcss": "^4.0.3"
   }
 }
