--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "daisyui": "^5.0.0-beta.7",
     "electron": "^33.2.1",
     "electron-builder": "^25.1.8",
+    "prettier": "^3.5.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "svelte": "^5.16.0",
     "typescript": "^5.7.2",
     "vite": "^6.0.6",
@@ -52,6 +54,7 @@
     "@tailwindcss/vite": "^4.0.3",
     "editorjs-drag-drop": "^1.1.16",
     "lucide-svelte": "^0.475.0",
+    "prettier-plugin-svelte": "^3.3.3",
     "tailwindcss": "^4.0.3"
   }
 }
