--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,6 @@
     "rootDir": "./src",
     "skipLibCheck": true
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.svelte"
-  ],
-  "exclude": [
-    "node_modules",
-    "output"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.svelte"],
+  "exclude": ["node_modules", "output"]
 }
