--- a/package.json
+++ b/package.json
@@ -24,10 +24,7 @@
   "license": "ISC",
   "description": "Note taking app and personal knowledge base",
   "devDependencies": {
-    "@skeletonlabs/skeleton": "^3.0.0-next.10",
-    "@skeletonlabs/skeleton-svelte": "^1.0.0-next.18",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@types/electron": "^1.6.12",
     "@types/node": "^22.10.5",
     "concurrently": "^9.1.2",
     "electron": "^33.2.1",
@@ -52,9 +49,10 @@
     "@editorjs/table": "^2.4.3",
     "@tailwindcss/vite": "^4.0.3",
     "editorjs-drag-drop": "^1.1.16",
+    "i18next": "^24.2.3",
     "lucide-svelte": "^0.475.0",
     "prettier-plugin-svelte": "^3.3.3",
-    "svelte-i18n": "^3.7.1",
+    "svelte-i18next": "^2.2.2",
     "tailwindcss": "^4.0.3"
   }
 }
