--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "rootDir": "./src",
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.svelte"],
+  "include": ["src/**/*.ts", "src/**/*.svelte", "src/svelte/i18n.js", "src/svelte/i18n.js"],
   "exclude": ["node_modules", "output"]
 }
