--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "description": "Note taking app and personal knowledge base",
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.10.5",
     "concurrently": "^9.1.2",
     "electron": "^33.2.1",
@@ -48,8 +49,18 @@
     "@editorjs/quote": "^2.7.6",
     "@editorjs/table": "^2.4.3",
     "@tailwindcss/vite": "^4.0.3",
+    "@tiptap/core": "^2.11.5",
+    "@tiptap/extension-code-block-lowlight": "^2.11.5",
+    "@tiptap/extension-image": "^2.11.5",
+    "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/extension-placeholder": "^2.11.5",
+    "@tiptap/extension-task-item": "^2.11.5",
+    "@tiptap/extension-task-list": "^2.11.5",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "editorjs-drag-drop": "^1.1.16",
     "i18next": "^24.2.3",
+    "lowlight": "^3.3.0",
     "lucide-svelte": "^0.475.0",
     "prettier-plugin-svelte": "^3.3.3",
     "svelte-i18next": "^2.2.2",
