--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^22.10.5",
     "concurrently": "^9.1.2",
     "electron": "^33.2.1",
@@ -65,6 +66,7 @@
     "i18next": "^24.2.3",
     "lowlight": "^3.3.0",
     "lucide-svelte": "^0.475.0",
+    "luxon": "^3.5.0",
     "prettier-plugin-svelte": "^3.3.3",
     "svelte-i18next": "^2.2.2",
     "tailwindcss": "^4.0.3"
