--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@tiptap/extension-task-item": "^2.11.5",
     "@tiptap/extension-task-list": "^2.11.5",
     "@tiptap/extension-text-style": "^2.11.5",
+    "@tiptap/extension-underline": "^2.11.7",
     "@tiptap/pm": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "editorjs-drag-drop": "^1.1.16",
