refactor: integrar noteStore en los controladores y componentes para mejorar la gestión de notas

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
          "@electron/*": ["electron/*"],
          "@utils/*": ["lib/utils/*"],
          "@controllers/*": ["controllers/*"],
+         "@stores/*": ["stores/*"],
          "@directives/*": ["directives/*"],
          "@fonts/*": ["fonts/*"],
          "@components/*": ["svelte/components/*"],
