feat: agregar extensión CleanPaste para limpiar texto pegado en el editor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
          "@projectTypes/*": ["types/*"],
          "@electron/*": ["electron/*"],
          "@utils/*": ["lib/utils/*"],
+         "@lib/*": ["lib/*"],
          "@controllers/*": ["controllers/*"],
          "@stores/*": ["stores/*"],
          "@directives/*": ["directives/*"],
