--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-   "i18n-ally.localesPaths": [
-      "src/i18n"
-   ]
+   "i18n-ally.localesPaths": ["src/i18n"],
+   "search.exclude": {
+      "**/node_modules": true,
+      "**/output": true
+   }
 }
