Creado Property Dialog y ajustes al disabled de floating menu

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
          "@utils/*": ["lib/utils/*"],
          "@lib/*": ["lib/*"],
          "@controllers/*": ["controllers/*"],
+         "@UIState/*": ["UIState/*"],
          "@stores/*": ["stores/*"],
          "@directives/*": ["directives/*"],
          "@fonts/*": ["fonts/*"],
