--- a/package.json
+++ b/package.json
@@ -1,65 +1,67 @@
 {
-  "name": "senda",
-  "version": "1.0.0",
-  "type": "module",
-  "main": "output/electron/main.js",
-  "scripts": {
-    "start": "npm run build && electron .",
-    "dev": "concurrently \"npm run build:svelte -- --watch\" \"npm run build:electron -- --watch\" \"npm run build:preload -- --watch\" \"electron .\"",
-    "build": "npm run build:svelte && npm run build:electron && npm run build:preload",
-    "build:svelte": "vite build --config vite.config.svelte.js --emptyOutDir",
-    "build:electron": "vite build --config vite.config.electron.js --emptyOutDir",
-    "build:preload": "vite build --config vite.config.electron-preload.js --emptyOutDir",
-    "dev:svelte": "vite --config vite.config.svelte.js",
-    "preview": "vite preview",
-    "dist": "npm run build && electron-builder"
-  },
-  "build": {
-    "files": [
-      "dist/**/*",
-      "src/electron/**/*"
-    ]
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "Note taking app and personal knowledge base",
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/luxon": "^3.4.2",
-    "@types/node": "^22.10.5",
-    "concurrently": "^9.1.2",
-    "electron": "^33.2.1",
-    "electron-builder": "^25.1.8",
-    "prettier": "^3.5.2",
-    "prettier-plugin-svelte": "^3.4.0",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "svelte": "^5.16.0",
-    "typescript": "^5.7.2",
-    "vite": "^6.0.6",
-    "vite-plugin-ts": "^1.3.2-1"
-  },
-  "dependencies": {
-    "@floating-ui/dom": "^1.6.13",
-    "@tailwindcss/vite": "^4.0.3",
-    "@tiptap/core": "^2.11.5",
-    "@tiptap/extension-code-block-lowlight": "^2.11.5",
-    "@tiptap/extension-color": "^2.11.5",
-    "@tiptap/extension-highlight": "^2.11.5",
-    "@tiptap/extension-image": "^2.11.5",
-    "@tiptap/extension-link": "^2.11.5",
-    "@tiptap/extension-placeholder": "^2.11.5",
-    "@tiptap/extension-task-item": "^2.11.5",
-    "@tiptap/extension-task-list": "^2.11.5",
-    "@tiptap/extension-text-style": "^2.11.5",
-    "@tiptap/extension-underline": "^2.11.7",
-    "@tiptap/pm": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.5",
-    "i18next": "^24.2.3",
-    "lowlight": "^3.3.0",
-    "lucide-svelte": "^0.475.0",
-    "luxon": "^3.5.0",
-    "svelte-i18next": "^2.2.2",
-    "tailwindcss": "^4.0.3"
-  }
+   "name": "senda",
+   "version": "1.0.0",
+   "type": "module",
+   "main": "output/electron/main.js",
+   "scripts": {
+      "start": "npm run build && electron .",
+      "dev": "concurrently \"npm run dev:svelte\" \"npm run build:electron -- --watch\" \"npm run build:preload -- --watch\" \"wait-on http://localhost:5173 && electron .\"",
+      "build": "npm run build:svelte && npm run build:electron && npm run build:preload",
+      "build:svelte": "vite build --config vite.config.svelte.js --emptyOutDir",
+      "build:electron": "vite build --config vite.config.electron.js --emptyOutDir",
+      "build:preload": "vite build --config vite.config.electron-preload.js --emptyOutDir",
+      "dev:svelte": "vite --config vite.config.svelte.js",
+      "preview": "vite preview",
+      "dist": "npm run build && electron-builder"
+   },
+   "build": {
+      "files": [
+         "dist/**/*",
+         "src/electron/**/*"
+      ]
+   },
+   "author": "Torrus Dev",
+   "license": "ISC",
+   "description": "Note taking app and personal knowledge base",
+   "devDependencies": {
+      "@sveltejs/vite-plugin-svelte": "^5.0.3",
+      "@tailwindcss/typography": "^0.5.16",
+      "@types/luxon": "^3.4.2",
+      "@types/node": "^22.10.5",
+      "concurrently": "^9.1.2",
+      "electron": "^33.2.1",
+      "electron-builder": "^25.1.8",
+      "electron-reload": "^2.0.0-alpha.1",
+      "prettier": "^3.5.2",
+      "prettier-plugin-svelte": "^3.4.0",
+      "prettier-plugin-tailwindcss": "^0.6.11",
+      "svelte": "^5.16.0",
+      "typescript": "^5.7.2",
+      "vite": "^6.0.6",
+      "vite-plugin-ts": "^1.3.2-1",
+      "wait-on": "^8.0.3"
+   },
+   "dependencies": {
+      "@floating-ui/dom": "^1.6.13",
+      "@tailwindcss/vite": "^4.0.3",
+      "@tiptap/core": "^2.11.5",
+      "@tiptap/extension-code-block-lowlight": "^2.11.5",
+      "@tiptap/extension-color": "^2.11.5",
+      "@tiptap/extension-highlight": "^2.11.5",
+      "@tiptap/extension-image": "^2.11.5",
+      "@tiptap/extension-link": "^2.11.5",
+      "@tiptap/extension-placeholder": "^2.11.5",
+      "@tiptap/extension-task-item": "^2.11.5",
+      "@tiptap/extension-task-list": "^2.11.5",
+      "@tiptap/extension-text-style": "^2.11.5",
+      "@tiptap/extension-underline": "^2.11.7",
+      "@tiptap/pm": "^2.11.5",
+      "@tiptap/starter-kit": "^2.11.5",
+      "i18next": "^24.2.3",
+      "lowlight": "^3.3.0",
+      "lucide-svelte": "^0.475.0",
+      "luxon": "^3.5.0",
+      "svelte-i18next": "^2.2.2",
+      "tailwindcss": "^4.0.3"
+   }
 }
