--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
          "@directives/*": ["directives/*"],
          "@fonts/*": ["fonts/*"],
          "@components/*": ["svelte/components/*"],
+         "@assets/*": ["svelte/assets/*"],
          "@i18n/*": ["i18n/*"],
          "@css/*": ["svelte/css/*"]
       }
