update to match new architecture of llm.md

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
          "@lib/*": ["lib/*"],
          "@controllers/*": ["controllers/*"],
          "@model/*": ["model/*"],
+         "@domain/*": ["domain/*"],
+         "@application/*": ["application/*"],
+         "@infrastructure/*": ["infrastructure/*"],
          "@schema/*": ["schema/*"],
          "@directives/*": ["directives/*"],
          "@components/*": ["svelte/components/*"],
