--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "module": "commonjs",
       "moduleResolution": "node",
       "strict": true,
+      "noEmitOnError": true,
       "esModuleInterop": true,
       "useDefineForClassFields": true,
       "outDir": "./output",
